[metadata]
name = pp-signals
version = 1.0.1
description =  PubSub Package based on Redis
author =  Oisin Mulvihill
author_email = everyone@pythonpro.co.uk
keywords =

classifiers =
    Topic :: Software Development :: Libraries
    Programming Language :: Python


install_requires =
    # Runtime dependencies
    cmdln
    redis

setup_requires =
    # Setup dependencies, usually empty.

tests_require =
    # Testing dependencies
    pytest-cov

console_scripts =
    signal-admin = pp.signals.scripts.main:main


[egg_info]
# This adds the 'dev' marker to versions.
# This must conform to PEP-386:
# http://www.python.org/dev/peps/pep-0386/#the-new-versioning-algorithm
tag_build = .dev1

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
# This section sets configuration for all invocations of py.test,
# both standalone cmdline and running via setup.py
norecursedirs = .hg *.egg build dist
